3.2.1 Wed, Sep  4, 2019
 * Fixed DNS.req resulttype error format (LP: #1842423)
 * Use errno.EADDRINUSE instead of the hard coded Linux value for improved
   portability (LP: #1793540)
 * Update test suite to correct for use of no longer existing DNS records

3.2.0 Mon, 23 Jul 2018
 * Rename internal use of async since it is a reserved word in python3.7
   (LP: #1776027)
 * Switch from distutils to setuptools
 * Ship test.py in the tarball

3.1.1 Thu, 06 Oct 2016 22:00:13 -0400
 * Update test suite for new example.org IP addresses
 * Fix missing bits for use of ipaddr-py with python3 < 3.3 (LP: #1319611)
   - Patch thanks to Arfrever Frehtes Taifersar Arahesis
 * Correct error in _DiscoverNameServers from OS X implementation in 3.0.1
   that prevents name server discovery on windows (LP: #1442424)
 * Correct encoding issue with label length to fix issues with DNS labels
   greater than 46 characters (LP: #1502853)
   - Thanks to Petr Czepiec for the patch
 * Use full path to /usr/sbin/scutil on OS X since scutil is not always in the
   search path (LP: #1630844)

3.1.0 Thu Apr 24 23:52:00 EDT 2014
 * Raise DNSError when no nameservers have been found by the time a
   Base.DNSRequest object is initialized
 * Add new DNS.DnsRequest.qry function to supercede DNS.DnsRequest.req to
   allow for non-backward compatible changes to be made in .qry while
   maintaining full backward compatibility with 3.0.3 and later in the 3.0
   series in .req
 * Add options for 'resulttype' to DnsResult.qry to allow for binary, integer,
   or text data to be returned for IP addresses
 * The default result type for IPv4 and IPv6 addresses in DNS.DnsRequest.qry
   is an ipaddress object
 * The ipaddress module is used internally.  This is included in python3.3 and
   the ipaddr-py module from https://code.google.com/p/ipaddr-py/ can be used
   with python3.2
 * New unittest based test suite - thanks to Diane Trout

3.0.4 Wed Aug  7 02:25:00 EDT 2013
