@@ -1,4 +1,5 @@
 3.2.1 Wed, Sep  4, 2019
+ * Add support for setting timeout for convenience methods in DNS.lazy
  * Fixed DNS.req resulttype error format (LP: #1842423)
  * Use errno.EADDRINUSE instead of the hard coded Linux value for improved
    portability (LP: #1793540)
